--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -50,602 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of cities in the list: 590\n"
+      "Number of cities in the list: 595\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['chonchi',\n",
-       " 'papatowai',\n",
-       " 'nemuro',\n",
-       " 'dzidzantun',\n",
-       " 'hermanus',\n",
-       " 'edinburgh of the seven seas',\n",
-       " 'taiohae',\n",
-       " 'gargalianoi',\n",
-       " 'blackmans bay',\n",
-       " 'turtas',\n",
-       " 'port-aux-francais',\n",
-       " 'urangan',\n",
-       " 'hithadhoo',\n",
-       " 'vorgashor',\n",
-       " 'port glaud',\n",
-       " 'weno',\n",
-       " 'verkhnyaya sinyachikha',\n",
-       " 'quellon',\n",
-       " 'jamestown',\n",
-       " 'yuzhno-kurilsk',\n",
-       " 'sitka',\n",
-       " 'mount gambier',\n",
-       " \"st. john's\",\n",
-       " 'georgetown',\n",
-       " 'new norfolk',\n",
-       " 'sao tome',\n",
-       " 'crane',\n",
-       " 'colonia',\n",
-       " 'rosetta',\n",
-       " 'ust-nera',\n",
-       " 'rongelap',\n",
-       " 'puerto natales',\n",
-       " 'yung shue wan',\n",
-       " 'leo',\n",
-       " 'east london',\n",
-       " 'queenstown',\n",
-       " 'bilibino',\n",
-       " 'uturoa',\n",
-       " 'longyearbyen',\n",
-       " 'waitangi',\n",
-       " 'kodiak',\n",
-       " 'kismayo',\n",
-       " 'bethel',\n",
-       " 'emerald',\n",
-       " 'ginir',\n",
-       " 'thompson',\n",
-       " 'college',\n",
-       " 'inarajan village',\n",
-       " 'yellowknife',\n",
-       " 'burley',\n",
-       " 'ushuaia',\n",
-       " 'touros',\n",
-       " 'mili',\n",
-       " 'kenora',\n",
-       " 'susuman',\n",
-       " 'kilindoni',\n",
-       " 'adamstown',\n",
-       " 'severo-yeniseyskiy',\n",
-       " 'grootfontein',\n",
-       " 'cabo san lucas',\n",
-       " 'saudarkrokur',\n",
-       " 'lihue',\n",
-       " 'shushtar',\n",
-       " 'vanino',\n",
-       " 'happy valley-goose bay',\n",
-       " 'mossel bay',\n",
-       " 'freetown',\n",
-       " 'richards bay',\n",
-       " 'luanco',\n",
-       " 'wailua homesteads',\n",
-       " 'albany',\n",
-       " 'at taj',\n",
-       " 'morehead city',\n",
-       " 'acarau',\n",
-       " 'invercargill',\n",
-       " 'labasa',\n",
-       " 'pacific grove',\n",
-       " 'gao',\n",
-       " \"port saint john's\",\n",
-       " 'callao',\n",
-       " 'codrington',\n",
-       " 'lisieux',\n",
-       " 'chittarkonda',\n",
-       " 'indramayu',\n",
-       " 'fortaleza',\n",
-       " 'karratha',\n",
-       " 'olonkinbyen',\n",
-       " 'fisterra',\n",
-       " 'pedernales',\n",
-       " 'fale old settlement',\n",
-       " 'serhiyivka',\n",
-       " 'fortuna',\n",
-       " 'kununurra',\n",
-       " 'ancud',\n",
-       " 'tonghae',\n",
-       " 'al hudaydah',\n",
-       " 'tura',\n",
-       " 'tazovsky',\n",
-       " 'tomohon',\n",
-       " 'margaret river',\n",
-       " 'montepuez',\n",
-       " 'quelimane',\n",
-       " 'vilyuysk',\n",
-       " 'puerto deseado',\n",
-       " 'kahriz',\n",
-       " 'bredasdorp',\n",
-       " 'xining',\n",
-       " 'chinchilla',\n",
-       " 'puerto ayora',\n",
-       " 'tolanaro',\n",
-       " 'gadani',\n",
-       " 'gadzhiyevo',\n",
-       " 'maun',\n",
-       " 'tozeur',\n",
-       " 'limon',\n",
-       " 'muisne',\n",
-       " 'grytviken',\n",
-       " 'peterhead',\n",
-       " 'walvis bay',\n",
-       " 'ottumwa',\n",
-       " 'hualien city',\n",
-       " 'hadibu',\n",
-       " 'nuuk',\n",
-       " 'kulia village',\n",
-       " 'san luis de la loma',\n",
-       " \"nar'yan-mar\",\n",
-       " 'sindgi',\n",
-       " 'kichmengskiy gorodok',\n",
-       " 'ornskoldsvik',\n",
-       " 'puerto san carlos',\n",
-       " 'pisco',\n",
-       " 'sisimiut',\n",
-       " 'tiksi',\n",
-       " 'aleksandrov gay',\n",
-       " 'cuatro cienegas de carranza',\n",
-       " 'sonsorol village',\n",
-       " 'nouadhibou',\n",
-       " 'ilulissat',\n",
-       " 'hihifo',\n",
-       " 'kathu',\n",
-       " 'tatsinskiy',\n",
-       " 'avarua',\n",
-       " 'stanley',\n",
-       " 'west island',\n",
-       " 'lebu',\n",
-       " 'banjarmasin',\n",
-       " 'partenit',\n",
-       " 'sitampiky',\n",
-       " 'labrador city',\n",
-       " 'arraial do cabo',\n",
-       " 'zabid',\n",
-       " 'san andres',\n",
-       " 'braidwood',\n",
-       " 'broome',\n",
-       " 'constantia',\n",
-       " 'los frentones',\n",
-       " 'isafjordur',\n",
-       " 'newnham',\n",
-       " 'puerto asis',\n",
-       " 'zaysan',\n",
-       " 'rantauprapat',\n",
-       " 'vila velha',\n",
-       " 'miandrivazo',\n",
-       " 'dalhart',\n",
-       " 'ijuw',\n",
-       " 'vernon',\n",
-       " 'whakatane',\n",
-       " 'la passe',\n",
-       " 'necochea',\n",
-       " 'mar del plata',\n",
-       " 'saipan',\n",
-       " 'qasr-e qand',\n",
-       " 'port mathurin',\n",
-       " 'okhotsk',\n",
-       " 'iqaluit',\n",
-       " 'paramonga',\n",
-       " 'port lincoln',\n",
-       " 'atafu village',\n",
-       " 'greymouth',\n",
-       " 'tsumeb',\n",
-       " 'charters towers',\n",
-       " 'hamilton',\n",
-       " 'mulanje',\n",
-       " 'san sebastian de la gomera',\n",
-       " 'castillos',\n",
-       " 'utrik',\n",
-       " 'amga',\n",
-       " 'tocopilla',\n",
-       " 'lazaro cardenas',\n",
-       " 'badger',\n",
-       " 'hailey',\n",
-       " 'palmer',\n",
-       " 'macenta',\n",
-       " 'mindelo',\n",
-       " 'afaahiti',\n",
-       " 'fuxin',\n",
-       " 'sandnessjoen',\n",
-       " 'kralendijk',\n",
-       " \"lakhdenpokh'ya\",\n",
-       " 'kingston',\n",
-       " 'aasiaat',\n",
-       " 'huarmey',\n",
-       " 'holualoa',\n",
-       " 'greenville',\n",
-       " 'saldanha',\n",
-       " 'port-vila',\n",
-       " 'yahyali',\n",
-       " 'klyuchi',\n",
-       " 'novodvinsk',\n",
-       " 'ribeira grande',\n",
-       " 'whitehorse',\n",
-       " 'vadso',\n",
-       " 'punta arenas',\n",
-       " 'lospalos',\n",
-       " 'nova sintra',\n",
-       " 'zeya',\n",
-       " 'benghazi',\n",
-       " 'bay harbor',\n",
-       " 'ampahana',\n",
-       " 'kruisfontein',\n",
-       " 'selfoss',\n",
-       " 'mount pearl',\n",
-       " 'taltal',\n",
-       " 'porto novo',\n",
-       " 'yinchuan',\n",
-       " 'cable beach',\n",
-       " 'humaita',\n",
-       " 'formosa do rio preto',\n",
-       " 'flin flon',\n",
-       " 'chos malal',\n",
-       " 'el porvenir',\n",
-       " 'nadym',\n",
-       " 'laguna',\n",
-       " 'ikryanoye',\n",
-       " 'azul',\n",
-       " 'anadyr',\n",
-       " 'lompoc',\n",
-       " 'koulikoro',\n",
-       " 'port elizabeth',\n",
-       " 'stephenville',\n",
-       " 'udachny',\n",
-       " 'qaqortoq',\n",
-       " 'sao vicente',\n",
-       " 'san mariano',\n",
-       " 'san juan de miraflores',\n",
-       " 'novouzensk',\n",
-       " 'keflavik',\n",
-       " 'kerch',\n",
-       " 'angaur state',\n",
-       " 'mosjoen',\n",
-       " 'cassilandia',\n",
-       " 'winona',\n",
-       " 'martinsburg',\n",
-       " 'port blair',\n",
-       " 'sur',\n",
-       " 'praia da vitoria',\n",
-       " 'sarandi del yi',\n",
-       " 'monte patria',\n",
-       " 'katsuren-haebaru',\n",
-       " 'cidade velha',\n",
-       " 'bhinmal',\n",
-       " 'puerto cabezas',\n",
-       " 'turpan',\n",
-       " 'constitucion',\n",
-       " 'bol',\n",
-       " 'flying fish cove',\n",
-       " 'akureyri',\n",
-       " 'tostado',\n",
-       " 'georgiyevka',\n",
-       " 'manchar',\n",
-       " 'tandalti',\n",
-       " 'kaga bandoro',\n",
-       " 'nagqu',\n",
-       " 'pitea',\n",
-       " 'cozumel',\n",
-       " 'meulaboh',\n",
-       " 'bag',\n",
-       " 'camana',\n",
-       " 'numbrecht',\n",
-       " 'talnakh',\n",
-       " 'oranjemund',\n",
-       " 'rohru',\n",
-       " \"la'ie\",\n",
-       " 'taulaga',\n",
-       " 'kantharalak',\n",
-       " 'egilsstadir',\n",
-       " 'newman',\n",
-       " 'ixtapa',\n",
-       " 'sola',\n",
-       " 'abeche',\n",
-       " 'sussex',\n",
-       " 'hammerfest',\n",
-       " 'kapuskasing',\n",
-       " 'kampong thom',\n",
-       " 'mangai',\n",
-       " 'howrah',\n",
-       " 'hotan',\n",
-       " 'peine',\n",
-       " 'khandyga',\n",
-       " 'jindabyne',\n",
-       " 'felipe carrillo puerto',\n",
-       " 'hawaiian paradise park',\n",
-       " 'westport',\n",
-       " 'al kharijah',\n",
-       " 'marsannay-la-cote',\n",
-       " 'portland',\n",
-       " 'luderitz',\n",
-       " 'dudinka',\n",
-       " 'siping',\n",
-       " 'alice springs',\n",
-       " \"saksaul'skiy\",\n",
-       " 'polyarnyy',\n",
-       " 'odda',\n",
-       " 'loango',\n",
-       " 'lexington-fayette',\n",
-       " 'basoda',\n",
-       " 'carnarvon',\n",
-       " 'sergeyevka',\n",
-       " 'patrasaer',\n",
-       " 'pantai cenang',\n",
-       " 'toliara',\n",
-       " 'manokwari',\n",
-       " 'kapit',\n",
-       " \"arkhangel'sk\",\n",
-       " 'krizevci',\n",
-       " 'biograd na moru',\n",
-       " 'booue',\n",
-       " 'naze',\n",
-       " 'baiti',\n",
-       " 'port hedland',\n",
-       " 'kristinestad',\n",
-       " 'san patricio',\n",
-       " 'labuan bajo',\n",
-       " 'cidreira',\n",
-       " 'naryn',\n",
-       " 'congonhas',\n",
-       " 'naduvannur',\n",
-       " 'coyutla',\n",
-       " 'mormugao',\n",
-       " 'manismata',\n",
-       " 'el calafate',\n",
-       " 'hong kong',\n",
-       " 'saint-philippe',\n",
-       " 'geraldton',\n",
-       " 'sishilichengzi',\n",
-       " 'inda silase',\n",
-       " 'lliria',\n",
-       " 'talodi',\n",
-       " 'jampur',\n",
-       " 'klaksvik',\n",
-       " 'lerwick',\n",
-       " 'magadan',\n",
-       " 'guerrero negro',\n",
-       " 'tumayr',\n",
-       " 'fort mcmurray',\n",
-       " 'takamaka',\n",
-       " 'gumdag',\n",
-       " 'bubaque',\n",
-       " 'tsiombe',\n",
-       " 'iskateley',\n",
-       " 'benoy',\n",
-       " 'tingi',\n",
-       " 'siwa oasis',\n",
-       " 'daru',\n",
-       " 'dabola',\n",
-       " 'frederiksvaerk',\n",
-       " 'vavatenina',\n",
-       " 'ahar',\n",
-       " 'la ronge',\n",
-       " 'kenai',\n",
-       " 'sinan',\n",
-       " 'port alfred',\n",
-       " 'chesapeake ranch estates',\n",
-       " 'vingt cinq',\n",
-       " 'kampung bukit tinggi, bentong',\n",
-       " 'anabar',\n",
-       " 'khanty-mansiysk',\n",
-       " 'hami',\n",
-       " 'ubaira',\n",
-       " 'tabuk',\n",
-       " 'santo antonio do monte',\n",
-       " 'bodo',\n",
-       " 'revda',\n",
-       " 'katsuura',\n",
-       " 'mandal',\n",
-       " 'lima',\n",
-       " 'bodaybo',\n",
-       " 'kotlas',\n",
-       " 'salalah',\n",
-       " 'tachilek',\n",
-       " 'lethem',\n",
-       " 'sao joao da barra',\n",
-       " 'minas',\n",
-       " 'khandud',\n",
-       " 'dogondoutchi',\n",
-       " 'jericho',\n",
-       " 'prokhorovka',\n",
-       " 'kavieng',\n",
-       " 'itamaraca',\n",
-       " 'mariehamn',\n",
-       " 'aketi',\n",
-       " 'saint-pierre',\n",
-       " \"oltinko'l\",\n",
-       " 'villa de soto',\n",
-       " 'kavaratti',\n",
-       " 'isangel',\n",
-       " 'numan',\n",
-       " 'wingham',\n",
-       " 'churapcha',\n",
-       " 'al jawf',\n",
-       " 'murzuq',\n",
-       " 'abalak',\n",
-       " 'craig',\n",
-       " 'nyurba',\n",
-       " 'fernie',\n",
-       " 'coahuayana de hidalgo',\n",
-       " 'minas de marcona',\n",
-       " 'multai',\n",
-       " 'lijiang',\n",
-       " 'zag',\n",
-       " 'tralee',\n",
-       " \"novyy turtkul'\",\n",
-       " 'coruripe',\n",
-       " 'iganga',\n",
-       " 'tchintabaraden',\n",
-       " 'darovskoy',\n",
-       " 'guiping',\n",
-       " 'ironwood',\n",
-       " 'al artawiyah',\n",
-       " 'zarate',\n",
-       " 'thames',\n",
-       " 'eshowe',\n",
-       " 'thinadhoo',\n",
-       " 'piacabucu',\n",
-       " 'benguela',\n",
-       " 'midvagur',\n",
-       " 'trinidad',\n",
-       " 'ketchikan',\n",
-       " 'sholokhovskiy',\n",
-       " 'kailua-kona',\n",
-       " 'east ballina',\n",
-       " 'ouellah',\n",
-       " 'najran',\n",
-       " 'chelyabinsk',\n",
-       " 'mitsamiouli',\n",
-       " 'nadi',\n",
-       " 'cockburn town',\n",
-       " 'mount isa',\n",
-       " 'oualidia',\n",
-       " 'awjilah',\n",
-       " 'pulsano',\n",
-       " 'petropavlovsk-kamchatsky',\n",
-       " 'ebon',\n",
-       " 'zaragoza',\n",
-       " 'roma',\n",
-       " 'semnan',\n",
-       " 'kiruna',\n",
-       " 'sorong',\n",
-       " 'usinsk',\n",
-       " 'tabalosos',\n",
-       " 'margate',\n",
-       " 'bardai',\n",
-       " 'acapulco de juarez',\n",
-       " 'pathein',\n",
-       " 'kyshtovka',\n",
-       " 'dagua',\n",
-       " 'cargados carajos',\n",
-       " 'mata-utu',\n",
-       " \"ust'-ilimsk\",\n",
-       " 'kurakhovo',\n",
-       " 'nantucket',\n",
-       " 'puerto carreno',\n",
-       " 'ciudad satelite',\n",
-       " 'kemijarvi',\n",
-       " 'tambopata',\n",
-       " 'taroa',\n",
-       " 'miquelon',\n",
-       " 'ahau',\n",
-       " 'paranhos',\n",
-       " 'altai',\n",
-       " 'guane',\n",
-       " 'katoomba',\n",
-       " 'mengcheng chengguanzhen',\n",
-       " 'majuro',\n",
-       " 'al bardiyah',\n",
-       " 'bayanaul',\n",
-       " 'san felipe',\n",
-       " 'lodja',\n",
-       " 'colby',\n",
-       " 'big rapids',\n",
-       " 'remire-montjoly',\n",
-       " 'cole harbour',\n",
-       " 'vilyuchinsk',\n",
-       " 'neon karlovasion',\n",
-       " 'basco',\n",
-       " 'nhamunda',\n",
-       " 'alaghsas',\n",
-       " 'ploudalmezeau',\n",
-       " \"ivdel'\",\n",
-       " 'baihar',\n",
-       " 'ambovombe',\n",
-       " 'nishinoomote',\n",
-       " 'lata',\n",
-       " 'sebin karahisar',\n",
-       " 'vila franca do campo',\n",
-       " 'petropavlovka',\n",
-       " 'argo',\n",
-       " 'igrim',\n",
-       " 'brokopondo',\n",
-       " \"syzran'\",\n",
-       " 'nsanje',\n",
-       " 'canatlan',\n",
-       " 'pontianak',\n",
-       " 'barra de santo antonio',\n",
-       " 'toga village',\n",
-       " 'tanjung selor',\n",
-       " 'kirensk',\n",
-       " 'duncan town',\n",
-       " 'ponta delgada',\n",
-       " 'cerkezkoy',\n",
-       " 'dapa',\n",
-       " 'choibalsan',\n",
-       " 'jincheng',\n",
-       " 'taghazout',\n",
-       " 'bandarbeyla',\n",
-       " 'zapolyarnyy',\n",
-       " 'tabarka',\n",
-       " 'san antonio de pale',\n",
-       " 'melfort',\n",
-       " 'nikolayevsk-on-amure',\n",
-       " 'lorengau',\n",
-       " 'boyolangu',\n",
-       " 'aykhal',\n",
-       " 'cocal',\n",
-       " 'zouerate',\n",
-       " 'tranovaho',\n",
-       " 'eforie sud',\n",
-       " 'chernyshevskiy',\n",
-       " 'coquimbo',\n",
-       " 'ovalle',\n",
-       " 'motygino',\n",
-       " 'rodniki',\n",
-       " 'puerto santa',\n",
-       " 'hirara',\n",
-       " 'khovd',\n",
-       " 'neryungri',\n",
-       " 'yenicaga',\n",
-       " 'puerto baquerizo moreno',\n",
-       " 'tucurui',\n",
-       " 'naberera',\n",
-       " 'kudahuvadhoo',\n",
-       " 'celestun',\n",
-       " 'vorkuta',\n",
-       " 'yokadouma',\n",
-       " 'port augusta',\n",
-       " 'viana do castelo',\n",
-       " 'tofol',\n",
-       " 'arar',\n",
-       " 'sharjah',\n",
-       " 'veraval',\n",
-       " 'hobyo',\n",
-       " 'brandon',\n",
-       " 'zuunmod',\n",
-       " 'nizhneangarsk',\n",
-       " 'howard springs',\n",
-       " 'serhetabat',\n",
-       " 'villa yapacani',\n",
-       " 'anloga',\n",
-       " 'pecan plantation',\n",
-       " 'agat village',\n",
-       " 'kzyltu',\n",
-       " 'fairmont',\n",
-       " 'korla',\n",
-       " 'bhimunipatnam',\n",
-       " 'aswan',\n",
-       " 'diu',\n",
-       " 'mabaruma',\n",
-       " 'harduaganj',\n",
-       " 'rikaze',\n",
-       " 'brookings',\n",
-       " 'enewetak',\n",
-       " 'brisas de zicatela',\n",
-       " 'kuta',\n",
-       " 'santa terezinha',\n",
-       " 'malango',\n",
-       " 'carutapera',\n",
-       " 'yacuiba',\n",
-       " 'achalpur',\n",
-       " 'langepas',\n",
-       " 'tazacorte']"
+       "<zip at 0x1abca8495c0>"
       ]
      },
      "execution_count": 3,
@@ -678,7 +89,9 @@
     "        cities.append(city)\n",
     "\n",
     "# Print the city count to confirm sufficient count\n",
-    "print(f\"Number of cities in the list: {len(cities)}\")\n"
+    "print(f\"Number of cities in the list: {len(cities)}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1917,7 +1330,7 @@
     "        record_count = 0\n",
     "\n",
     "    # Create endpoint URL with each city\n",
-    "    city_url = f\"api.openweathermap.org/data/2.5/forecast/daily?q={city_data}&cnt=1&appid={weather_api_key}&unit=imperial\"\n",
+    "    city_url = f\"http://api.openweathermap.org/geo/1.0/direct?q={city}&appid={weather_api_key}\"\n",
     "    \n",
     "    # Log the url, record, and set numbers\n",
     "    print(\"Processing Record %s of Set %s | %s\" % (record_count, set_count, city))\n",
